--- a/Olá,_este_é_o_Colaboratory.ipynb
+++ b/Olá,_este_é_o_Colaboratory.ipynb
@@ -16,7 +16,7 @@
         "id": "Nma_JWh-W-IF"
       },
       "source": [
-        "<h1>Conheça o Colab</h1>\n",
+        "<h1>Conheça a FLAI</h1>\n",
         "\n",
         "Se você já conhece bem o Colab, confira este vídeo para saber mais sobre as tabelas interativas, a visualização do histórico de código executado e o Palette de comandos.\n",
         "\n",
